--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
-      <version>8.0.1</version>
+      <version>6.0</version>
       <scope>provided</scope>
     </dependency>
 
@@ -40,6 +40,14 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+
+
+    <dependency>
+    	<groupId>org.jboss.logging</groupId>
+    	<artifactId>jboss-logging</artifactId>
+    	<version>3.3.0.Final</version>
+    	<scope>provided</scope>
     </dependency>
   </dependencies>
 
